<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iamagamedev.kodetestandroid.forecastActivity.ForecastActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:gravity="center"
        android:padding="@dimen/dp8"
        android:text="@string/step_7"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48">

        <View
            android:id="@+id/viewHorizontalSeparator"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp4"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/textViewForecastDepartureChoice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp48"
            android:layout_marginRight="@dimen/dp48"
            android:layout_toLeftOf="@id/viewHorizontalSeparator"
            android:layout_toStartOf="@id/viewHorizontalSeparator"
            android:drawableLeft="@drawable/ic_plane"
            android:drawableStart="@drawable/ic_plane"
            android:gravity="center_vertical"
            android:textColor="@color/button_blue"
            android:text="@string/there"
            tools:text="@string/home"/>

        <TextView
            android:id="@+id/textViewForecastDestinationChoice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp48"
            android:layout_marginStart="@dimen/dp48"
            android:layout_toEndOf="@id/viewHorizontalSeparator"
            android:layout_toRightOf="@id/viewHorizontalSeparator"
            android:drawableLeft="@drawable/ic_plane_mirror"
            android:drawableStart="@drawable/ic_plane_mirror"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/gray_not_selected"
            tools:text="@string/there"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewForecast"
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
